# kafka-demo

./: .gitignore  README.md
kafka/: create_topic.sh  dl_extract_kafka.sh  start_kafka.sh  start_zk.sh
kafka/kafka_2.12-2.4.0/logs/: kafkaServer-gc.log.0.current  zookeeper-gc.log.0.current
postgresql/: setup_db_notes.sql.notes
producer_consumer/python/: README.md
producer_consumer/python/consumer/: pyproject.toml
producer_consumer/python/consumer/consumer/: consumer.py
producer_consumer/python/consumer/tests/: test_consumer.py
producer_consumer/python/producer/: pyproject.toml
producer_consumer/python/producer/producer/: metrics.py
producer_consumer/python/producer/tests/: test_producer.py
python/consumer/: pyproject.toml
python/consumer/consumer/: consumer.py
python/producer/: pyproject.toml
python/producer/producer/: metrics.py
python/producer/tests/: test_producer.py
